Fixed side menu not showing on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -112,9 +112,7 @@ header {
 
     nav {
         $nav-gap: 2rem;
-        margin-left: auto;
-        @include flex;
-        gap: $nav-gap;
+        
 
         ul {
             list-style: none;
@@ -159,14 +157,80 @@ header {
         }
 
 
+        @include mixins.md {
+            // display: none;
+            
+            margin-left: auto;
+            @include flex;
+            gap: $nav-gap;
+        }
+
+
         @include mixins.sm {
-            display: none;
+            display: flex; // shifted to the toggler
+            // flex-direction: column;
+
+            opacity: 0;
+            z-index: -1;
+
+            position: fixed;
+            top: 5rem;
+            right: 0;
+            width: 60%;
+            height: 100%;
+            flex-direction: column;
+            text-align: center;
+
+            &::before {
+                content: "";
+                position: fixed;
+
+                backdrop-filter: blur(20px);
+                top: 0;
+                left: 0;
+
+                width: 100%;
+                height: 100%;
+            }
         }
 
     }
 
 
-    @include mixins.sm {}
+    @include mixins.sm {
+        color: inherit;
+        // .nav-wrapper {
+        //     display: none;
+        // }
+    
+        .hambugger:has(input:checked){
+
+            position: fixed;
+            
+            &~.nav-wrapper {
+                // display: flex;
+                opacity: 1;
+                z-index: 1;
+                
+                ul {
+                    flex-direction: column;
+                    gap: 1rem;
+
+                    a {
+                        background-color: transparent;
+                        padding: 1rem 0;
+                        color: $hero-bg;
+                        @include mixins.poppins-semibold;
+                        font-size: 1.6rem;
+                    }
+                }
+            }
+    
+            .nav-cta {
+                margin-inline: auto;
+            }
+        }
+    }
 
 
 }
